# grenze

./: Cargo.toml  README.md
crates/grenze-server/: Cargo.toml
crates/grenze-server/src/: main.rs
crates/grenze-server/src/api/: health.rs  mod.rs  proxy.rs
docker/: compose.yml  rust.Dockerfile
docs/: README.md
