[workspace.dependencies]
tokio = { version = "1.47.1" }
async-trait = "0.1.83"
clap = "4.5.45"
clap_complete = "4.5.57"
clap_mangen = "0.2.29"
clap-markdown = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.99"
path-clean = "1.0.1"
kube = { version = "2.0.1" }
k8s-openapi = { version = "0.26.0" }
futures = "0.3.30"
axum = { version = "0.8.6", features = ["macros", "json"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
tower = "0.5.1"
redis = { version = "0.32.7", features = ["tokio-comp"] }

[workspace]
members = ["crates/grenze-server"]
resolver = "3"
